# VolumeCube

./: .gitattributes  .gitignore  LICENSE  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
firmware/esp32_serial_receiver/: esp32_serial_receiver.ino
patterns/audio/: beat-pulse.js  spectrum-cube.js  vu-bars.js
patterns/classics/: big-eye.js  fire.js  harmonic-blob.js  jellyfish.js  life3d.js  lightning.js  metaballs.js  noise-field.js  plasma-globe.js  plasma.js  pong-3d.js  rainbow-wave.js  smiley-face.js  tetris3d.js
patterns/debug/: stream-probe.js
patterns/particles/: fireworks-chrysanthemum.js  fireworks.js  meteors.js  rain.js  snow.js  sparks.js
patterns/spatial/: expanding-spheres.js  hilbert-curve.js  hypercube.js  lorenz-attractor.js  rotating-cube.js  sweeping-plane.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ErrorBoundary.tsx  ShortcutsHelp.tsx
src/components/Audio/: AudioPanel.tsx
src/components/Output/: OutputPanel.tsx
src/components/Params/: ParamsPanel.tsx
src/components/Power/: PowerPanel.tsx
src/components/Structure/: StructurePanel.tsx
src/components/Viewer/: Cube.tsx  SnapshotHandler.tsx  StructureOverlay.tsx  Viewer.tsx  (+3 more)
src/core/: audio.ts  colorPipeline.ts  cubeGeometry.test.ts  cubeGeometry.ts  keyboardShortcuts.ts  patternApi.ts  patternRender.ts  patternRuntime.ts  power.test.ts  power.ts  usePatternHost.ts  utils.ts  wiring.test.ts  wiring.ts
src/state/: store.ts
(+5 files in other folders)
