[package]
name = "volumecube"
version = "0.1.0"
description = "VolumeCube — volumetric LED cube simulator and pattern authoring tool"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "volumecube_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
serialport = "4"
